1.0 2017-07-10
~~~~~~~~~~~~~~

* First official release of legato.