@@ -1,14 +1,13 @@
 from __future__ import absolute_import, print_function
 import sys
 import os
-import argparse
 import logging
 import signal
 from watchdog.observers import Observer
 from watchdog.events import *
 
-import yaml
 from legato import registry
+from legato.config import read_configuration_file
 import time
 
 # plugins
@@ -44,46 +43,7 @@ def run(args):
         registry.start()
 
 
-def read_configuration_file(configuration_file):
-    list_of_files = list()
-    list_of_files.append(configuration_file)
-
-    with open(configuration_file, 'r') as fh:
-        configuration = yaml.load(fh.read())
-
-    items = {}
-    if configuration is not None:
-        items.update(configuration.items())
-
-    for name, config in items.items():
-        if 'include' in config:
-            include = config['include']
-            if os.path.isfile(include):
-                extra_configuration, extra_files = read_configuration_file(include)
-                if extra_configuration is not None:
-                    configuration.update(extra_configuration)
-                list_of_files += extra_files
-            elif os.path.isdir(include):
-                for file_in_dir in os.listdir(include):
-                    filename = os.path.join(include, file_in_dir)
-                    extra_configuration, extra_files = read_configuration_file(filename)
-                    if extra_configuration is not None:
-                        configuration.update(extra_configuration)
-                    list_of_files += extra_files
-            else:
-                raise IOError
-
-    return configuration, list_of_files
-
-
-def main():
-    parser = argparse.ArgumentParser()
-
-    parser.add_argument("config_file", help="The configuration file")
-    parser.add_argument("--verbose", help="Enable debug level logging")
-
-    args = parser.parse_args()
-
+def main(args):
     # setup logging
     level = logging.INFO
     if args.verbose:
@@ -115,5 +75,3 @@ def shutdown(*args, **kwargs):
 
 signal.signal(signal.SIGINT, shutdown)
 
-if __name__ == "__main__":
-    main()
