@@ -1,3 +1,5 @@
+* Added support to run tasks manually
+
 1.0 2017-07-10
 ~~~~~~~~~~~~~~
 
